--- a/src/app/complaint/complaint.component.html
+++ b/src/app/complaint/complaint.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6">
             <h2>Report an issue</h2>
-            <sub>Please report an authentic issue to retain credebility</sub>
+            <sub class="content">Please report an authentic issue to retain credebility</sub>
             <hr>
         </div>
     </div>
