--- a/src/app/complainttracker/complainttracker.component.html
+++ b/src/app/complainttracker/complainttracker.component.html
@@ -1,3 +1,5 @@
-<p>
-  complainttracker works!
-</p>
+<div class="container">
+  <div class="col-md-12">
+    <app-issuelist></app-issuelist>
+  </div>
+</div>
