--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -2,7 +2,7 @@
   <div class="row">
       <div class="col-md-6">
           <h2>Contact Us</h2>
-          <sub>Feel free to contact us</sub>
+          <sub class="content">Feel free to contact us</sub>
           <hr>
       </div>
   </div>
