--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,39 +1,44 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
-        <div class="container">
-            <span>
-                <a routerLink="home"><img (click)="collapseMenu()" class="logo" aria-label="ZDesk-Client" src="../../assets/img/logo.png"/></a>
-                <span class="welcome" >ZDESK<sub>make a difference</sub></span>
-            </span>            
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon" id="toggle"></span>
-            </button>
-    
-            <div class="collapse navbar-collapse justify-content-end" id="menu">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" id="home" (click)="collapseMenu();makeLinkActive($event);" routerLink="home">Home</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" id="signin" (click)="collapseMenu();makeLinkActive($event);" routerLink="signin">Sign in<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="signup" (click)="collapseMenu();makeLinkActive($event);" routerLink="signup">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                            <a class="nav-link" id="profile" (click)="collapseMenu();makeLinkActive($event);" routerLink="profile">Profile</a>
-                    </li>
-                    <li class="nav-item">
-                            <a class="nav-link" id="tracker" (click)="collapseMenu();makeLinkActive($event);" routerLink="tracker">Tracker</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="complaint" (click)="collapseMenu();makeLinkActive($event);" routerLink="complaint">Complaint</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="contactus" (click)="collapseMenu();makeLinkActive($event);" routerLink="contactus">Contact Us</a>
-                    </li>
-                </ul>
-    
-                <!-- <form class="form-inline my-2 my-lg-0">
+    <div class="container">
+        <a routerLink="home">
+            <img (click)="collapseMenu()" class="logo" aria-label="ZDesk-Client" src="../../assets/img/logo.png" />
+        </a>
+        <span class="welcome">ZDESK
+            <sub>make a difference</sub>
+        </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon" id="toggle"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="menu">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" id="home" (click)="collapseMenu();makeLinkActive($event);" routerLink="home">Home</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" id="signin" (click)="collapseMenu();makeLinkActive($event);" routerLink="signin">Sign in
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="signup" (click)="collapseMenu();makeLinkActive($event);" routerLink="signup">Sign up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="profile" (click)="collapseMenu();makeLinkActive($event);" routerLink="profile">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="tracker" (click)="collapseMenu();makeLinkActive($event);" routerLink="tracker">Tracker</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="complaint" (click)="collapseMenu();makeLinkActive($event);" routerLink="complaint">Complaint</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="contactus" (click)="collapseMenu();makeLinkActive($event);" routerLink="contactus">Contact Us</a>
+                </li>
+            </ul>
+
+            <!-- <form class="form-inline my-2 my-lg-0">
                     <div class="input-group input-group-sm">
                         <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Search...">                        
                     </div>
@@ -45,6 +50,6 @@
                     </div>
                     
                 </form> -->
-            </div>
         </div>
-    </nav>
+    </div>
+</nav>
