--- a/src/app/issuelist/issuelist.component.html
+++ b/src/app/issuelist/issuelist.component.html
@@ -1,4 +1,14 @@
 <div class="container">
+  <div class="row">
+      <div class="col-md-6">
+          <h2>Current Issues</h2>
+          <sub class="content">issue list from different regions</sub>
+          <hr>
+      </div>
+  </div>
+</div>
+
+<div class="container">
   <h2 class="heading">COMPLAINTS</h2>
   <a class="link" routerLink="/tracker" >
     <div class="alert alert-warning">
