--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -3,7 +3,7 @@
       <div class="row"> 
         <div class="col-md-4">
           <h2>Forgot Password?</h2>
-          <sub>You can change password here</sub>
+          <sub class="content">You can change password here</sub>
           <hr>
         </div>
       </div>
