--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6">
             <h2>Please Login</h2>
-            <sub>You can login with email or phone number</sub>
+            <sub class="content">You can login with email or phone number</sub>
             <hr>
         </div>
     </div>
