--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6">
             <h2>Register</h2>
-            <sub>Please fill the details and click register</sub>
+            <sub class="content">Please fill the details and click register</sub>
             <hr>
         </div>
     </div>
