--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -34,7 +34,15 @@
                                     password</label>
                                 <input type="password" ngModel class="form-control" id="password" name="password" placeholder="password" />
                             </div>
-                        </div>                        
+                        </div> 
+                        <div class="col-md-6">
+                            <a class="btn button btn-social-icon btn-facebook" href="/auth/facebook?scope=public_profile">
+                                <span class="fa fa-facebook">Login With Facebook</span>
+                              </a>
+                              <a class="btn button btn-social-icon btn-google" href="/auth/google?scope=profile email">
+                                <span class="fa fa-google">Login with Google</span>
+                              </a>
+                        </div>                       
                     </div>
                     <div class="row">
                         <div class="col-md-6">
@@ -48,7 +56,7 @@
                     </div>
                 </form>
             </div>
-        </div>
+        </div>        
     </div>
 </div>
 <app-danger></app-danger>
