--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
 			<div class="profile-sidebar">
 				<!-- SIDEBAR USERPIC -->
 				<div class="profile-userpic">
-					<img src="../../assets/img/logo.png" class="img-responsive" alt="ZDESK">
+					<img src="resources/assets/img/logo.png" class="img-responsive" alt="ZDESK">
 				</div>
 				<!-- END SIDEBAR USERPIC -->
 				<!-- SIDEBAR USER TITLE -->
